--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ header{
 #link-list{
     background-color:#485a27;
     height: 400px;
-    width: 150px;
+    width: 100%;
     position: absolute;
     top: -400px;
     right: 0px;
