--- a/css/style.css
+++ b/css/style.css
@@ -460,5 +460,19 @@ header{
 #first-book-button{
     grid-area: fbb;
     align-self: center;
-    margin-right: 20px;
+    margin-right: 20px
+    ;
+}
+
+#stopping-img-section{
+    display: flex;
+    height: 500px;
+    justify-content: center;
+    align-items: center;
+}
+
+#stopping-img-img{
+    margin: 20px;
+    height: 97%;
+    width: 100%;
 }
