--- a/css/style.css
+++ b/css/style.css
@@ -587,3 +587,38 @@ header{
     width: 100%;
 }
 
+#loan-section{
+    height: 500px;
+    margin: 40px;
+    background-image: url(/img/regular/waiters-background-img.jpg);
+}
+
+#loan-section img{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: auto;
+}
+
+#loan-art-1{
+    text-align: center;
+    padding: 40px;
+}
+
+#loan-art-2{
+    display: flex;
+    margin-top: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+#loan-art-2 img{
+    height: 120px;
+}
+
+#loan-list{
+    list-style: none;
+    margin-top: 10px;
+    margin-right: 20px;
+}
