--- a/css/style.css
+++ b/css/style.css
@@ -473,6 +473,8 @@ header{
     height: 500px;
     padding: 40px;
     width: auto;
+    background-size: cover;
+    background-position: center;
 }
 
 #square-text{
@@ -484,6 +486,7 @@ header{
     align-items: center;
     justify-content: center;
     padding-bottom: 5px;
+    border-radius: 2.5px;
 }
 
 #slogan{
@@ -533,6 +536,10 @@ header{
 #short-church{
     height: 125px;
     width: 125px;
+}
+
+#long-church{
+    width: 180px;
 }
 
 #art-funeral{
@@ -591,6 +598,9 @@ header{
     height: 500px;
     margin: 40px;
     background-image: url(/img/regular/waiters-background-img.jpg);
+    width: auto;
+    background-size: cover;
+    background-position: center;
 }
 
 #loan-section img{
@@ -620,5 +630,34 @@ header{
 #loan-list{
     list-style: none;
     margin-top: 10px;
-    margin-right: 20px;
+    margin-right: 25px;
+}
+
+#frame{
+    background-color: rgb(243, 231, 179);
+    height: 130px;
+    width: 144px;
+    padding: 5px;
+}
+
+#flex-waiters{
+    margin: 20px;
+    height: 550px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#flex-waiters img{
+    width: 160px;
+}
+
+#wine-img{
+    background-image: url(/img/regular/wine-img.jpg);
+    height: 110px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    margin-top: 50px;
+    margin-bottom: 3px;
 }
