--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,6 @@ header{
     position: absolute;
     right: 25px;
     top: 100px;
-    
     rotate: -90deg;
 }
 
@@ -201,12 +200,20 @@ header{
 #italien-section{
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 0.4fr 0.2fr 2fr;
+    grid-template-rows: 0.4fr 0.2fr 2fr 0.5fr;
     grid-template-areas: 
     "it it"
     "vi pi"
     "li pi"
+    "pit pit"
     ;
+}
+
+#pit{
+    grid-area: pit;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
 }
 
 #pi{
@@ -283,7 +290,7 @@ header{
 #vietnames-menu{
     display: grid;
     grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 0.2fr 1.5fr 0.2fr 1fr;
+    grid-template-rows: 2fr, 2fr, 0.5fr, 0.5fr;
     grid-template-areas: 
     "hv hv hv"
     "et tv tr"
@@ -300,19 +307,19 @@ header{
 
 #img1-viet{
     grid-area: et;
-    height: 50%;
+    height: 40%;
     justify-self: center;
 }
 
 #img2-viet{
     grid-area: tv;
-    height: 50%;
+    height: 40%;
     justify-self: center;
 }
 
 #img3-viet{
     grid-area: tr;
-    height: 50%;
+    height: 40%;
     justify-self: center;
 }
 
@@ -376,9 +383,10 @@ header{
 
 #section-office-meals{
     height: 500px;
+    margin: 20px;
     display: grid;
     grid-template-columns: 60% 40%;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 0.5fr 5fr;
     grid-template-areas: 
     "mp ho"
     "pm in"
@@ -392,7 +400,8 @@ header{
 }
 
 #image-place{
-    height: 150px;
+    height: 100px;
+    width: auto;
 }
 
 #contact-info{
@@ -411,7 +420,14 @@ header{
 
 #place-for-meals{
     grid-area: pm;
-    background-color: #485a27;
+    
+}
+
+#pic-of-sun-rise{
+
+    width: 10%;
+    height: auto;
+
 }
 
 #contact-ways{
@@ -710,12 +726,17 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .headline-venue{
-    background-color: rgba(253, 209, 216, 0.733);
+    background-color: rgba(253, 209, 216, 0.8);
     height: 50px;
     width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     
 }
 
@@ -729,4 +750,141 @@ header{
 
 #text-venue4{
     background-image: url(/img/regular/venue4.jpg);
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    height: 350px;
+    margin: 20px;
+}
+
+.footer-items{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.underline{
+    text-decoration: underline;
+}
+
+#logo{
+    width: 50px; 
+    grid-area: lfg;
+}
+
+#footer-grid{
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: 20% 80%;
+    grid-template-areas: 
+    "hfg lfg"
+    "tfg lfg"
+    ;
+}
+
+#tfg{
+    grid-area: tfg;
+}
+
+#hfg{
+    grid-area: hfg;
+}
+
+#mexican-section{
+    display: flex;
+    margin: 20px;
+    flex-direction: column;
+    align-items: center;
+}
+
+#inner-mexican-section{
+    display: flex;
+    margin: 20px;
+}
+
+#inner-inner-mexican{
+    margin-right: 45px;
+    white-space: nowrap;
+}
+
+#mexican-list{
+    margin-top: 10px;
+    list-style: none;
+
+}
+
+@media screen and (min-width:800px){ 
+
+    #main-page-media{
+        display: grid;
+        margin: 40px;
+        height: 450px;
+        grid-template-columns: 40% 35% 35%;
+        grid-template-rows: 50% 40% 10%;
+        grid-template-areas: 
+        "pfsi mpc"
+        "pfsi stb"
+        "pfsi fbbi"
+        ;
+    }
+
+    #main-page-cover{
+        grid-area: mpc;
+    }
+
+    #place-for-sliding-img{
+        grid-area: pfsi;
+    }
+
+    #first-book-button{
+        grid-area: fbbi;
+    }
+
+    #start-book{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-right: 20px;
+    }
+
+    #start-book{
+        grid-area: stb;
+    }
+
+    #slide_img{
+        height: 350px;
+        width: auto;
+    }
+
+    #listerner-right{
+        height: 25px;
+        width: 25px;
+        left: 475px;
+        top: 160px;
+    }
+
+    #listerner-left{
+        height: 25px;
+        width: 25px;
+        top: 160px;
+    }
+
+    #pic-of-sun-rise{
+
+        width: 100px;
+        height: 100px;
+    
+    }
+
+    .line{
+        background: #485a27;
+        height: 3px;
+        width: 95%;
+        position: relative;
+        left: 20px;
+        right: 20px;
+        margin: 20px;
+    }
+
 }
