--- a/css/style.css
+++ b/css/style.css
@@ -99,15 +99,6 @@ header{
     margin: 10px;
 }
 
-.disapear-line{
-    background: #485a27;
-    width: 90%;
-    height: 3px;
-    position: relative;
-    left: 10px;
-    margin: 10px;
-}
-
 #allergy-article{
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -391,7 +382,7 @@ header{
 }
 
 #section-office-meals{
-    height: 500px;
+    height: 375px;
     margin: 20px;
     display: grid;
     grid-template-columns: 60% 40%;
@@ -404,11 +395,11 @@ header{
 
 #meals-parent{
     grid-area: mp;
-    justify-self: center;
-    align-self: center;
+    text-align: center;
 }
 
 #image-place{
+    margin-top: 15px;
     height: 100px;
     width: auto;
 }
@@ -427,16 +418,17 @@ header{
     align-self: center;
 }
 
-#place-for-meals{
+#welcome-text{
     grid-area: pm;
-    
+    width: 200px;
+    text-align: center;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
-#pic-of-sun-rise{
-
-    width: 10%;
-    height: auto;
-
+#facade-img{
+    margin-top: 10px;
 }
 
 #contact-ways{
@@ -461,6 +453,57 @@ header{
     margin-left: 70px;
     margin-top: 20px;
     text-align: center;
+}
+
+#meals-grid{
+    height: 575px;
+    margin: 20px;
+    background-color: rgb(255, 219, 225);
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 10% 18% 18% 18% 18% 18%;
+    grid-template-areas: 
+    "mag mag"
+    "srg lmp1"
+    "srg lmp2"
+    "srg lmp3"
+    "srg lmp4"
+    "srg lmp5"
+    ;
+}
+
+.meals{
+    margin-top: 40px;
+}
+
+#sun-rise{
+    grid-area: srg;
+}
+
+#mag{
+    grid-area: mag;
+    margin-top: 10px;
+    text-align: center;
+}
+
+#lmp1{
+    grid-area: lmp1;
+}
+
+#lmp2{
+    grid-area: lmp2;
+}
+
+#lmp3{
+    grid-area: lmp3;
+}
+
+#lmp4{
+    grid-area: lmp4;
+}
+
+#lmp5{
+    grid-area: lmp5;
 }
 
 #start-book{
@@ -920,7 +963,7 @@ header{
         grid-template-rows: 50% 50%;
         grid-template-areas: 
         "af1 af2"
-        "af3 fg"
+        "af3 af4"
         ;
     }
 
@@ -939,8 +982,8 @@ header{
         background-color: blueviolet;
     }
 
-    #footer-grid{
-        grid-area: fg;
+    #art-foot4{
+        grid-area: af4;
         background-color: aquamarine;
     }
 
@@ -966,4 +1009,18 @@ header{
         flex-direction: column;
     }
 
+    #flex-starting-section{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .starting-section{
+        width: 400px;
+    }
+
+    .book-button{
+        margin: 0;
+        margin-top: 20px;
+    }
 }
