--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0%;
     padding: 0%;
@@ -27,6 +28,7 @@ header{
 #first-item-in-header{
     grid-area: br;
     margin-left: 15px;
+    
 }
 
 #listerner-left{
@@ -210,6 +212,7 @@ header{
 
 #italien-section{
     display: grid;
+    margin: 10px;
     grid-template-columns: 50% 50%;
     grid-template-rows: 0.4fr 0.2fr 2fr 0.5fr;
     grid-template-areas: 
@@ -256,6 +259,7 @@ header{
 
 #french-menu{
     display: grid;
+    margin: 10px;
     grid-template-columns: 50% 50%;
     grid-template-rows: 1fr 0.2fr 1fr;
     grid-template-areas: 
@@ -300,8 +304,10 @@ header{
 
 #vietnames-menu{
     display: grid;
+    margin: 10px;
+    margin-bottom: 10px;
     grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 2fr, 2fr, 0.5fr, 0.5fr;
+    grid-template-rows: 10% 70% 10% 10%;
     grid-template-areas: 
     "hv hv hv"
     "et tv tr"
@@ -314,12 +320,14 @@ header{
     grid-area: hv;
     text-align: center;
     margin-bottom: 5px;
+    background-color: aqua;
 }
 
 #img1-viet{
     grid-area: et;
     height: 40%;
     justify-self: center;
+    background-color: blueviolet;
 }
 
 #img2-viet{
@@ -340,20 +348,95 @@ header{
     text-align: center;
     margin-bottom: 5px;
     position: relative;
+    background-color: beige;
 }
 
 #list1-viet{
     grid-area: l1;
     list-style: none;
     text-align: end;
+    background-color: cadetblue;
 }
 
 #list2-viet{
     grid-area: l2;
     list-style: none;
     text-align: start;
+    background-color: chocolate;
 }
 
+#japanese-menu{
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#japanese-flex{
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+}
+
+#japanese-flex img{
+    margin-left: 20px;
+}
+
+#japanese-list{
+    list-style: none;
+}
+
+#head-japanese{
+    margin-bottom: 10px;
+}
+
+#last-section-menu{
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.squares-menu{
+    height: 200px;
+    width: 100%;
+    padding: 20px;
+    margin: 20px;
+    background-color: rgb(255, 219, 225);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#last-square{
+    display: grid;
+    padding: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 30% 70%;
+    grid-template-areas: 
+    "ah ah"
+    "ta ia"
+    ;
+}
+
+#allergy-head{
+    grid-area: ah;
+    margin-top: 50px;
+    text-align: center;
+}
+
+#text-allergy{
+    grid-area: ta;
+  
+}
+
+#image-allergy{
+    grid-area: ia;
+    height: 60%;
+    margin-left: 40px;
+}
 
 /*
 #offer-line1{
@@ -884,7 +967,6 @@ header{
 #mexican-list{
     margin-top: 10px;
     list-style: none;
-
 }
 
 #stopping-img-section-again{
