--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 
 *{
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: 'Lora', serif;
 }
 
 body{
@@ -159,8 +161,10 @@ header{
     border-radius: 20%;
     transition: all 0.5s;
 }
+
 #link-list{
     background-color:#485a27;
+    font-family: 'Lora', serif;
     height: 400px;
     width: 100%;
     position: absolute;
@@ -389,6 +393,7 @@ header{
 
 .book-button{
     height: 50px;
+    font-family: 'Lora', serif;
     width: 150px;
     background-color: rgb(255, 219, 225);
     margin-top: 10px;
@@ -557,7 +562,7 @@ header{
     background-position: center;
 }
 
-#square-text{
+.square-text{
     height: 190px;
     width: 100px;
     background-color: rgb(215, 214, 219);
@@ -895,12 +900,12 @@ header{
     width: 0;
 }
 
-@media screen and (min-width:700px){ 
+@media screen and (min-width:760px){ 
 
     #main-page-media{
         display: grid;
         margin: 20px;
-        height: 400px;
+        height: 450px;
         grid-template-columns: 40% 25% 35%;
         grid-template-rows: 50% 40% 10%;
         grid-template-areas: 
@@ -1118,7 +1123,7 @@ header{
 
     #side-to-side-section{
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         margin: 0;
         align-items: center;
     }
@@ -1152,8 +1157,6 @@ header{
         width: 500px;
         background-color: rgb(255, 219, 225);
         padding: 20px;
-        
-        
     }
 
     #japanese-menu{
